grammar.ebnf
program         ::= library_decl? import_decl* statement*

library_decl    ::= "library" identifier

statement       ::= declaration | expression

import_decl     ::= "import" module_path ("as" identifier)?
module_path     ::= identifier ("." identifier)*

declaration     ::= variable_decl | type_decl

variable_decl   ::= ("let" | "var") identifier (":" type_expr)? ("=" expression)?
type_decl       ::= "type" identifier ("[" type_param_list "]")?
type_param_list ::= identifier ("," identifier)*

type_expr       ::= lambda_type | identifier ("[" type_list "]")?

lambda_type     ::= "(" type_list? ")" "-> " type_expr
type_list       ::= type_expr ("," type_expr)*

expression      ::= lambda
                  | if
                  | call
                  | binary_expr
                  | unary_expr
                  | literal
                  | identifier
                  | "(" expression ")"

if              ::= "if" expression ":" block

lambda          ::= ("(" param_list? ")")? ("->" type_expr)? ":" block
block           ::= INDENT statement* DEDENT

call            ::= expression ("." identifier)? ("[" type_list "]")? ("(" arg_list? ")")? lambda?

binary_expr     ::= expression operator expression
unary_expr      ::= unary_op expression

operator        ::= "+" | "-" | "*" | "/" | "%" | "==" | "!=" | "<" | ">"
                  | "<=" | ">=" | "and" | "or" | "=" | custom_op
unary_op        ::= "not" | "-"
custom_op       ::= "<CUSTOM_OP>"   /* any operator symbol registered via the operator macro */

param_list      ::= param ("," param)* ("..." identifier)?
param           ::= identifier (":" type_expr)?
arg_list        ::= arg ("," arg)*
arg             ::= (identifier ":")? expression  /* named or positional */

literal         ::= string_lit | number_lit | bool_lit | unit_lit | collection_lit
string_lit      ::= '"' char* '"'
number_lit      ::= "-"? digit+ ("." digit+)?
bool_lit        ::= "true" | "false"
unit_lit        ::= "discard"
collection_lit  ::= "[" (expression ("," expression)*)? "]"

identifier      ::= letter (letter | digit | "_")*
letter          ::= [a-zA-Z] | "_"
digit           ::= [0-9]
char            ::= [^"]            /* Catch-all for string characters */

INDENT          ::= "<INDENT>"      /* increase in leading whitespace */
DEDENT          ::= "<DEDENT>"      /* return to prior indentation level */
